--- a/paper.tex
+++ b/paper.tex
@@ -2,7 +2,7 @@
 
 \begin{document}
 
-\title{Plausible Test Case Generation for Identifying Meaningful Compiler Bugs}
+\title{Plausible Test Case Generation for Identifying Compiler Bugs}
 
 \maketitle
 
@@ -12,8 +12,8 @@
 \input{sec/overview}
 \input{sec/clgen}
 \input{sec/methodology}
-\input{sec/vs_clsmith}
 \input{sec/bugs}
+\input{sec/vs_clsmith}
 \input{sec/related_work}
 \input{sec/conclusion}
 
