--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -1,5 +1,12 @@
-\section{Bug Hunting with CLgen}
+\section{Bugs Found in OpenCL Implementations}
 
-Intensive, extended testing of OpenCL configurations using CLgen. Examples of bugs shown in Figure~\ref{lst:bugs}.
+This section reports on the results of extended testing of 9 OpenCL implementations using our method.
+
+Examples of bugs shown in Figure~\ref{lst:bugs}.
 
 \input{lst/bugs}
+
+
+\subsection{Bug Characteristics}
+
+\cc{TODO \ldots}
