--- a/sec/clgen.tex
+++ b/sec/clgen.tex
@@ -1,12 +1,15 @@
 \section{Test Case Generation using Deep Learning}
 
+Our approach to compiler test case generation consists of two parts: first, extending the state-of-the-art in deep learning program synthesis; the second, a general application of established differential testing methodologies for running code samples.
+
+
 \subsection{CLgen}
 
 Figure~\ref{fig:deeptune} shows the test case generation process.
 
 \begin{itemize}
-\item An initial seed corpus of OpenCL samples is mined from GitHub. An oracle compiler (LLVM 3.9) is used to reject samples were not well formed.
-\item Corpus is preprocessed and encoded for training. A uniform code style is enforced for whitespace, braces, identifier names, etc.
+\item An initial seed corpus of OpenCL samples is mined from GitHub. An oracle compiler (LLVM 3.9) is used to reject samples that are not well-formed.
+\item The corpus is preprocessed: a uniform code style is enforced for whitespace, braces, identifier names, etc. The prepocessed corpus is encoded using either character-level or a hybrid token/character-level encoding~\cite{Cummins2017b}.
 \item LSTM networks model the vocabulary distribution over the encoded corpus.
 \item The trained network is sampled to generate new programs.
 \end{itemize}
@@ -34,6 +37,8 @@ Figure~\ref{fig:deeptune} shows the test case generation process.
 
 \subsection{Test Case Execution}
 
-At first, we used the test harness of CLSmith. However, this was too inflexible for our needs, requiring all kernels accept the same argument of a single \texttt{unsigned long} buffer. This prototype, in addition to being restricting, is not a common OpenCL use case (only XX\% of GitHub kernels have this prototype). Instead, we created cldrive, a tool to generate test harnesses for arbitrary OpenCL kernels.
+At first, we used the test harness of CLSmith. However, we considered this too inflexible for our needs: CLSmith kernels accept no inputs, and compute a single result into a \texttt{unsigned long} buffer. This prototype is not a common OpenCL use case (only XX\% of GitHub kernels have this prototype). To test more a expressive range of kernels, we created \emph{cldrive}, a tool to generate test harnesses for arbitrary OpenCL kernels.
 
-Generate host code stub to compile kernel. If kernel compiles: parse AST, read function arguments, generate data inputs for arguments. Limited subset of data types supported: No structs, no irregular data types (this is just an implementation detail, and can be addressed with more dev time).
+We use cldrive to generate a unique test harness for every OpenCL sample we generate; the test harness has the OpenCL kernel embedded within it. If the sample is well-formed (i.e. it can be parsed), the test harness creates a \emph{payload} of buffers and values to match the function signature; else if the sample is ill-formed we generate a compile-only stub. 
+
+Cldrive is the only language-specific component of our software stack. We support a limited subset of data types for kernel inputs: no structs, no irregular data types (this is just an implementation detail, and can be addressed with more dev time).
