--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -1,8 +1,6 @@
 \section{Testing Methodologies}\label{sec:methodology}
 
-We describe two experiments testing OpenCL configurations using our approach. The first is a direct comparison of our approach to CLSmith, the current state-of-the-art in OpenCL test case generation. The second is results from unstructured, opportunistic testing of OpenCL implementations using CLgen, resulting in XX bug reports.
-
-\input{fig/test_process}
+We describe two experiments testing OpenCL configurations using our approach. The first is results from unstructured, opportunistic testing of OpenCL implementations while developing CLgen, resulting in XX bug reports to OpenCL vendors. The second is a direct comparison of our approach to CLSmith, the current state-of-the-art in OpenCL test case generation.
 
 % \subsection{Parameters}
 % \input{tab/cldrive-params}
@@ -21,17 +19,15 @@ We describe two experiments testing OpenCL configurations using our approach. Th
 
 \subsection{Test case execution}
 
-Figure~\ref{fig:test-process} shows the methodology for a single test case.
+\input{fig/test_process}
 
-In prior work we required that synthesized programs be well formed and compute \emph{useful work}. For the purpose of testing compilers, we discarded these requirements. Instead, we demand that the behavior of test cases is \emph{portable} and \emph{reproducible}. In some respects this simplifies the execution process.
+Figure~\ref{fig:test-process} shows the methodology for determining the outcomes of a single test case.
 
-The possible outcomes for a test case are a build failure (\textbf{bf}), build crash (\textbf{bc}), runtime crash (\textbf{c}), or pass (\textbf{\cmark}). A \textbf{bf} occurs when compilation of a kernel fails, usually accompanied by an error message. A \textbf{bc} outcome on the other hand represents a compiler crash which 
-
-In~\cite{Lidbury2015a}, the authors do not distinguish between compiler crashes and other runtime crashes.
+In prior work we required that synthesized programs be well formed and compute \emph{useful work}. For the purpose of testing compilers, we discarded these requirements. Instead, we demand that the behavior of test cases is \emph{portable} and \emph{reproducible}. In some respects this simplifies the execution process. The possible outcomes for a test case are a build failure (\textbf{bf}), build crash (\textbf{bc}), runtime crash (\textbf{c}), or pass (\textbf{\cmark}). A \textbf{bf} occurs when compilation of a kernel fails, usually accompanied by an error message. A \textbf{bc} outcome occurs when the compiler crashes. In~\cite{Lidbury2015a}, the authors do not distinguish between compiler crashes and build failures. A \textbf{c} outcome occurs when the program crashes during execution. The \textbf{bto} and \textbf{to} outcomes occur when the program compilation or execution time out, respectively. As in previous work, we do not guarantee that generated programs time out, finding that XX\% of programs do not.
 
 \paragraph{Floating points} The OpenCL 1.2 specification permits acceptable error bounds (ULP) for floating point operations and builtin functions. Some operations like addition, subtraction, and multiplication are precise; divide permits a small error, and builtins vary widely. Thus two implementation may give different answers that both fit within the allowed ranges (and because errors propagate through operations it's hard to even describe the ULP on the final output). \texttt{half\_} functions permit large error bounds. \texttt{native\_} functions have ``implementation defined'' error bounds. TODO: Denormal numbers may optionally be pushed to zero.
 
-CSmith, and by extension, CLSmith, do not support floating point operations. In our observations with testing using CLSmith, we observed that in cases of wrong-code bugs, the computed values are usually entirely incorrect, not only marginally different. We hypothesized that by allowing for relaxed comparisons between floating point values, we could still differential test. We permit a margin of deviation for floating point comparisons. This means that if a compiler were to emit wrong code which changes the computed value only subtly, we may miss it; though we have no reason to suggest that such a case is any more likely than a wrong code bug leading the compiler to produce exactly the same output.
+CSmith, and by extension, CLSmith, do not support floating point operations. In our observations with testing using CLSmith (described in Section~\ref{sec:vs_clsmith}), we observed that in cases of wrong-code bugs, the computed values are usually entirely incorrect, not only marginally different. We hypothesized that by allowing relaxed comparisons between floating point values, we could still differential test. We permit a margin of deviation for floating point comparisons. This means that if a compiler were to emit wrong code which changes the computed value only subtly, we may miss it; though we have no reason to suggest that such a case is any more likely than a wrong code bug leading the compiler to produce exactly the same output, which neither we or any prior work have noted.
 % Section 7.4 of OpenCL 1.2 spec.
 
 
@@ -42,8 +38,11 @@ In~\cite{Lidbury2015a}, a configuration is determined to have produced a wrong c
 We select the mode output across a range of devices. Voting is used to select the oracle output.
 %
 \begin{enumerate}
-	\item \emph{Wrong code} Program terminates gracefully, but computes a result which differs from the majority.
-	\item \emph{Build failure} Online compilation of OpenCL program fails.
-	\item \emph{Runtime failure} One or more OpenCL API calls return an error status during the program execution, or the program crashes.
-	\item \emph{Okay} Program terminates gracefully and computes a result which agrees with the majority.
+	\item \textbf{w} \emph{Wrong code} Program terminates gracefully, but computes a result which differs from the majority.
+	\item \textbf{bf} \emph{Build failure} Online compilation of OpenCL program fails.
+	\item \textbf{bc} \emph{Build crash} Online compilation of OpenCL program fails.
+	\item \textbf{bto} \emph{Build timeout} Online compilation of OpenCL exceeds a timeout of 60 seconds.
+	\item \textbf{c} \emph{Runtime crash} One or more OpenCL API calls return an error status during the program execution, or the program crashes.
+	\item \textbf{to} \emph{Runtime timeout} Program execution exceeds the timeout of 60 seconds.
+	\item \textbf{\cmark} \emph{Okay} Program terminates gracefully and computes a result which agrees with the majority.
 \end{enumerate}
