--- a/sec/clgen.tex
+++ b/sec/clgen.tex
@@ -5,7 +5,7 @@ Our approach to compiler test case generation consists of two parts: first, exte
 
 \subsection{CLgen}
 
-Figure~\ref{fig:deeptune} shows the test case generation process.
+Figure~\ref{fig:deeptune} shows the test case generation process. Extends prior work~\cite{Cummins2017a}.
 
 \begin{itemize}
 \item An initial seed corpus of OpenCL samples is mined from GitHub. An oracle compiler (LLVM 3.9) is used to reject samples that are not well-formed.
