--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -1,6 +1,6 @@
 \section{Introduction}\label{sec:intro}
 
-\cc{Draft annotation}
+\cc{iannotation}
 \hl{Draft annotation}
 \pp{Draft annotation}
 \am{Draft annotation}
