--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -17,7 +17,7 @@ We describe two experiments testing OpenCL configurations using our approach. Th
 %  \item Standard-conformant OpenCL program. The program
 %\end{enumerate}
 
-\subsection{Test case execution}
+\subsection{Test Case Execution}
 
 \input{fig/test_process}
 
@@ -46,3 +46,7 @@ We select the mode output across a range of devices. Voting is used to select th
 	\item \textbf{to} \emph{Runtime timeout} Program execution exceeds the timeout of 60 seconds.
 	\item \textbf{\cmark} \emph{Okay} Program terminates gracefully and computes a result which agrees with the majority.
 \end{enumerate}
+
+
+\subsection{Voting Heuristics}
+
