--- a/fig/test_process.tex
+++ b/fig/test_process.tex
@@ -1,8 +1,8 @@
 \begin{figure}
   \centering %
-  \includegraphics[width=\columnwidth]{img/test_process}%
+  \includegraphics[width=.6\columnwidth]{img/test_process}%
   \caption{%
-  	Test case execution, and possible outcomes. For each test case, a $(+,-)$ pair of outcomes is produced. Each outcome can be one of \{c,to,\cmark,bf,bc,bto\}.%
+  	Test case execution, and possible outcomes. Each test case produces one of 6 possible outcomes: \{bf,bc,bto,c,to,\cmark\}.%
   }%
   \label{fig:test-process} %
 \end{figure}
