--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -1,16 +1,16 @@
-\section{Finding Bugs in OpenCL Compilers}
+\section{Bugs Discovered in OpenCL Compilers}
 
-This section reports on the results of extended testing of 9 OpenCL implementations using CLgen. We found that all the compilers we tested crashed, and all of them silently emit wrong code. We divide our discussion by class of bug: first compiler and runtime crashes, then wrong-code bugs.
+This section reports on the results of extended testing of 9 OpenCL configurations using CLgen. All configurations yielded bugs. Every compiler crashed, and every compiler silently generated wrong code. To date, we have submitted XX bug reports to compiler vendors. We divide our discussion by class of bug: first compiler and runtime crashes, then wrong-code bugs.
 
 \subsection{Compiler Crashes}
+
+We found numerous cases where a kernel triggers a crash in the compiler (and as a result, the host process). Figure~\ref{intel-llvm-assertion} fails an assertion from the LLVM code generator backend.
 
 
 \subsection{Runtime Crashes}
 
-Figure~\ref{TODO} exposes a bug in POCL in which a kernel containing an undefined symbol will successfully compile without warning, then crash the program when attempting to run the kernel. Such a test case is trivial to generate, yet could not be synthesized by CSmith.
+Figure~\ref{lst:pocl-undefined-symbols} exposes a bug in POCL in which a kernel containing an undefined symbol will successfully compile without warning, then crash the program when attempting to run the kernel. Such a test case is trivial to generate, yet could not be synthesized by CSmith.
 
 \subsection{Wrong-code Bugs}
-
-Examples of bugs shown in Figure~\ref{lst:bugs}.
 
 \input{lst/bugs}
