--- a/sec/clgen.tex
+++ b/sec/clgen.tex
@@ -1,11 +1,11 @@
 \section{Test Case Generation using Deep Learning}
 
-Our approach to compiler test case generation consists of two parts: first, extending the state-of-the-art in deep learning program synthesis; the second, a general application of established differential testing methodologies for running code samples.
+Our compiler test case generation approach consists of two parts: first, extending the state-of-the-art in deep learning program synthesis; the second, a general application of established differential testing methodologies for running code samples.
 
 
 \subsection{CLgen}
 
-Figure~\ref{fig:deeptune} shows the test case generation process. Extends prior work~\cite{Cummins2017a}.
+Figure~\ref{fig:deeptune} shows the test case generation process. We extend prior work on synthetic program generation using LSTM networks~\cite{Cummins2017a}. We use a two layer LSTM network of 512 nodes each, trained for 50 epochs using an initial learning rate of XX and decaying by a factor of a half every 5 epochs.
 
 \begin{itemize}
 \item An initial seed corpus of OpenCL samples is mined from GitHub. An oracle compiler (LLVM 3.9) is used to reject samples that are not well-formed.
@@ -14,28 +14,28 @@ Figure~\ref{fig:deeptune} shows the test case generation process. Extends prior 
 \item The trained network is sampled to generate new programs.
 \end{itemize}
 
-\noindent In subsequent iterations, synthesized kernels may be used to augment the training corpus.
-
-\begin{itemize}
-\item Samples are synthesized by the network and pruned using the rejection filter.
-\item The samples are mixed with kernels from the GitHub seed corpus.
-\item These combined samples are labeled (synthetic or human), and used to train a classifier for human-or-robot.
-\item The classifier is tested on unseen programs, and the accuracy is used as a fitness function for the model's parameters.
-\item A GA mutates and evolves the best performing parameters.
-\end{itemize}
+%\noindent In subsequent iterations, synthesized kernels may be used to augment the training corpus.
+%
+%\begin{itemize}
+%\item Samples are synthesized by the network and pruned using the rejection filter.
+%\item The samples are mixed with kernels from the GitHub seed corpus.
+%\item These combined samples are labeled (synthetic or human), and used to train a classifier for human-or-robot.
+%\item The classifier is tested on unseen programs, and the accuracy is used as a fitness function for the model's parameters.
+%\item A GA mutates and evolves the best performing parameters.
+%\end{itemize}
 
 
 \begin{figure}
   \centering
-  \includegraphics[width=.95\columnwidth]{img/clgen} %
+  \includegraphics[width=.85\columnwidth]{img/clgen} %
   % \vspace{-2em}%
   \caption{%
-    Test-case generation. A corpus of programs from GitHub is used to seed a generative model for program codes.%
+    Test-case generation. An corpus of programs from GitHub is used to seed a generative model for program codes, whose outputs are parameterized to construct test cases.%
   }%
   \label{fig:deeptune}
 \end{figure}
 
-\subsection{Test Case Execution}
+\subsection{Test Harness Construction}
 
 At first, we used the test harness of CLSmith. However, we considered this too inflexible for our needs: CLSmith kernels accept no inputs, and compute a single result into a \texttt{unsigned long} buffer. This prototype is not a common OpenCL use case (only XX\% of GitHub kernels have this prototype). To test more a expressive range of kernels, we created \emph{cldrive}, a tool to generate test harnesses for arbitrary OpenCL kernels.
 
