--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -13,8 +13,16 @@ Table~\ref{tab:results}.
 \begin{table*}
 	\scriptsize %
 	\centering %
+	\input{build/tab/outcomes}
+	\caption{Testing results using CLSmith and CLgen for 48 hours each. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) test outcomes for CLSmith and CLgen, respectively. \cc{Asterisk in 'total' column means the full 48 hours of data have not yet been collected. All results are excluding reductions.}}
+	\label{tab:outcomes}
+\end{table*}
+
+\begin{table*}
+	\scriptsize %
+	\centering %
 	\input{build/tab/megatable}
-	\caption{Testing results using CLSmith and CLgen for 48 hours each. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote wrong-code (w), build failure (\textbf{bf}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) test cases for CLSmith and CLgen, respectively. \cc{Asterisk in 'total' column means the full 48 hours of data have not yet been collected. All results are excluding reductions.}}
+	\caption{Testing results using CLSmith and CLgen for 48 hours each. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote wrong-code (w), build failure (\textbf{bf}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) classifications for CLSmith and CLgen, respectively. \cc{Asterisk in 'total' column means the full 48 hours of data have not yet been collected. All results are excluding reductions.}}
 	\label{tab:results}
 \end{table*}
 
@@ -47,7 +55,7 @@ Potentially interesting questions: What is the total lines of code which get run
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/kernel-sizes}%
 	\caption{%
-		Kernel line counts, grouped by classification. Programs with wrong-code (\emph{w}) classifications have been reduced.%
+		Kernel line counts, grouped by classification. CLSmith programs with wrong-code (\emph{w}) classifications have been reduced.%
 	}%
 	\label{fig:kernel-sizes} %
 \end{figure}
