--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -65,7 +65,7 @@ Potentially interesting questions: What is the total lines of code which get run
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/total-tests}%
 	\caption{%
-		Test cases.%
+		Test cases. \cc{TODO: Replot with the fastest and slowest device for each%
 	}%
 	\label{fig:total-tests} %
 \end{figure}
