--- a/paper.tex
+++ b/paper.tex
@@ -3,7 +3,7 @@
 \begin{document}
 
 \title{Plausible Test Case Generation for Identifying Compiler Bugs}
-
+% \date{}  % hides the date
 \maketitle
 
 \input{abstract}
@@ -17,9 +17,7 @@
 \input{sec/related_work}
 \input{sec/conclusion}
 
-
 % \input{sec/acks}  % double blind review
-
 
 \printbibliography
 
