--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -45,7 +45,7 @@ Potentially interesting questions: What is the total lines of code which get run
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/runtimes}%
 	\caption{%
-		Runtimes, excluding timeouts. \cc{TODO: CLgen generation times, CLgen reduction times}%
+		Runtimes, excluding timeouts. \cc{TODO: CLgen generation times}%
 	}%
 	\label{fig:runtimes} %
 \end{figure}
