--- a/sec/overview.tex
+++ b/sec/overview.tex
@@ -10,7 +10,7 @@
 	\centering %
 	% \rowcolors{2}{white}{gray!25}
 	\input{build/tab/platforms}
-	\caption{Experimental platforms we tested, and the number of submitted bug generated and reported to date. \cc{I'll clean up column names}}
+	\caption{Experimental platforms we tested, and the number of generated and submitted bug reports to date. \cc{I'll clean up column names}}
 	\label{tab:platforms}
 \end{table*}
 
