--- a/abstract.tex
+++ b/abstract.tex
@@ -7,5 +7,5 @@ What is needed is a technique for biasing the random generation of programs so t
 
 We present a new approach for the generation of \emph{plausible} compiler test cases. We apply deep learning techniques over large corpuses of open source code fragments to learn models which describe the structure of common real world codes. We use these models to generate thousands of code samples, and show how established differential testing methodologies can be used to expose bugs in compilers which are symptomatic of real hand-written code.
 
-We extend the state of the art in compiler test-case generation, automatically exposing bugs in compilers which are likely to arise from real world use cases, in a way which is not possible using existing techniques. In an empirical evaluation of 9 OpenCL implementations, we discover bugs in all of them, submitting XX bug reports to commercial and open source OpenCL implementations.
+We extend the state of the art in compiler test-case generation, automatically exposing bugs in compilers which are likely to arise from real world use cases, in a way which is not possible using existing techniques. In an empirical evaluation of 9 commercial and open source OpenCL implementations, we discover bugs in all of them, submitting XX bug reports to commercial and open source OpenCL implementations.
 \end{abstract}
