--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -19,7 +19,7 @@ Because Csmith programs are free form undefined behavior, there is only a single
 	\includegraphics[width=.85\columnwidth]{img/difftest} %
 	% \vspace{-2em}%
 	\caption{%
-		Differential testing compilers across a single test case. A test case consists of a program source and all runtime parameters and data. Outcomes are either the output of the program execution, a compiler crash, a runtime crash, or a timeout error.%
+		Differential testing compiler/hardware configurations across a single test case. A test case consists of a program source and its runtime parameters and data. Outcomes may be the output of the program execution, a compiler crash, a runtime crash, or a timeout error.%
 	}%
 	\label{fig:difftest}
 \end{figure}
