--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -49,7 +49,7 @@ Potentially interesting questions: What is the total lines of code which get run
 	\centering %
 	\includegraphics[width=\columnwidth]{build/img/runtimes}%
 	\caption{%
-		Runtimes, excluding timeouts. \cc{TODO: CLgen generation times}%
+		Test case runtimes, excluding timeouts. On average, CLgen test case execution is $x\times$ faster than CLSmith. \cc{TODO: CLgen generation times}%
 	}%
 	\label{fig:runtimes} %
 \end{figure}
