--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -26,7 +26,7 @@ Table~\ref{tab:outcomes} shows the outcomes of test cases. Once voting heuristic
 	\scriptsize %
 	\centering %
 	\input{build/tab/megatable}
-	\caption{Classifying test case outcomes of Table~\ref{tab:outcomes} using voting heuristics. Columns denote wrong-code (w), build failure (\textbf{bf}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) classifications for CLSmith and CLgen, respectively. \cc{Asterisk in 'total' column means the full 48 hours of data have not yet been collected. All results are excluding reductions.}}
+	\caption{Using voting heuristics to uncover anomalous results in Table~\ref{tab:outcomes}. Columns denote wrong-code (w), build failure (\textbf{bf}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) classifications for CLSmith and CLgen, respectively. \cc{Asterisk in 'total' column means the full 48 hours of data have not yet been collected. All results are excluding reductions.}}
 	\label{tab:classifications}
 \end{table*}
 
